3270font (1.2.6-1) unstable; urgency=medium

  * New upstream release.

 -- Adam Borowski <kilobyte@angband.pl>  Tue, 22 Dec 2015 20:56:51 +0100

3270font (1.2.5-1) unstable; urgency=medium

  * New upstream release.

 -- Adam Borowski <kilobyte@angband.pl>  Wed, 02 Dec 2015 23:12:19 +0100

3270font (1.2.3-1) unstable; urgency=medium

  * New upstream release
  * Add a watch file.

 -- Adam Borowski <kilobyte@angband.pl>  Fri, 28 Aug 2015 22:28:09 +0200

3270font (1.2-1) unstable; urgency=low

  * Initial release (Closes: #776449)

 -- Adam Borowski <kilobyte@angband.pl>  Thu, 29 Jan 2015 02:55:49 +0100