@@ -4,6 +4,12 @@
 %:
 	dh $@
 
+override_dh_auto_build:
+	make all
+
+override_dh_auto_test:
+	fontlint 3270Medium.otf 3270Medium.pfm 3270Medium.ttf 3270Medium.woff
+
 override_dh_auto_install:
 
 override_dh_auto_clean:
